--- a/notebooks/image_test_sample_2.ipynb
+++ b/notebooks/image_test_sample_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,6 +106,26 @@
     "        #img = Image.fromarray(preprocessed, 'RGB')\n",
     "    results = pytesseract.image_to_string(preprocessed)\n",
     "    return results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'  \\n\\nGB: Shell fabric1:100% polyester\\nrecycled\\n\\nLining: 100% polyester recycled\\nPadding: 100% recycled content\\nNL: Bovenstoft: 100% polyester\\ngerecyciede\\n\\nVoering: 100% polyester getecyelade\\nVulling: 100% geracycleds inhoud\\n\\nDE: Oberstofft: 100% Polyester recyeett\\nFutter: 100% Polyester recyceit\\nWattierung: 100% recycelt Inhalt\\n\\nFR: Etoffe extérieuret: 100%\\npolyester recycié\\n\\nDoublura: 100% polyester recycle\\nRemplissage: 100% recyclé content\\n\\nanti\\n\\n \\n\\n \\n\\x0c'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_to_string(image)"
    ]
   },
   {
