extracting tag info

--- a/notebooks/image_test_sample_2.ipynb
+++ b/notebooks/image_test_sample_2.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "'  \\n\\nGB: Shell fabric1:100% polyester\\nrecycled\\n\\nLining: 100% polyester recycled\\nPadding: 100% recycled content\\nNL: Bovenstoft: 100% polyester\\ngerecyciede\\n\\nVoering: 100% polyester serecyelade\\nVulling: 100% geracyclede inhoud\\n\\nDE: Oberstofft: 100% Polyester reeyveett\\nFutter: 100% Polyester recyceit\\nWattierung: 100% recycelt Inhalt\\n\\nFR: Etoffe extéricuret: 100%\\npolyester recycle\\n\\nDoublura: 100% polyester recycle\\nRemplissage: 100% recyclé content\\n\\n——_- —-\\n\\n \\n\\n \\n\\x0c'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        " '']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5178,7 +5178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -5250,7 +5250,7 @@
        " 'teraphtalate']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5262,7 +5262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5297,6 +5297,459 @@
     "    if matching: \n",
     "        all_matches.append(matching)\n",
     "all_matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['polyester',\n",
+       "  ['GB: Shell fabric1:100% polyester',\n",
+       "   'Lining: 100% polyester recycled',\n",
+       "   'NL: Bovenstoft: 100% polyester',\n",
+       "   'Voering: 100% polyester serecyelade',\n",
+       "   'polyester recycle',\n",
+       "   'Doublura: 100% polyester recycle']]]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_matches = []\n",
+    "for fibre in fibres_list:\n",
+    "    matching = [s for s in ocr_splitted if fibre in s]\n",
+    "    if matching:\n",
+    "        matched = [fibre, matching]\n",
+    "        all_matches.append(matched)\n",
+    "all_matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rec_org_list = ['nylon', 'polyester', 'linen', 'hemp', 'cotton', 'wool']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_matches = pd.DataFrame(all_matches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>polyester</td>\n",
+       "      <td>[GB: Shell fabric1:100% polyester, Lining: 100...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           0                                                  1\n",
+       "0  polyester  [GB: Shell fabric1:100% polyester, Lining: 100..."
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[           0                                                  1\n",
+       " 0  polyester  [GB: Shell fabric1:100% polyester, Lining: 100...]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matches_check_ro = [all_matches.iloc[0:1] for match in all_matches[0] if match in rec_org_list]\n",
+    "matches_check_ro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(matches_check_ro)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>polyester</td>\n",
+       "      <td>[GB: Shell fabric1:100% polyester, Lining: 100...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           0                                                  1\n",
+       "0  polyester  [GB: Shell fabric1:100% polyester, Lining: 100..."
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matches_check_ro[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(matches_check_ro[0][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [GB: Shell fabric1:100% polyester, Lining: 100...\n",
+       "Name: 1, dtype: object"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matches_check_ro[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['GB: Shell fabric1:100% polyester',\n",
+       "  'Lining: 100% polyester recycled',\n",
+       "  'NL: Bovenstoft: 100% polyester',\n",
+       "  'Voering: 100% polyester serecyelade',\n",
+       "  'polyester recycle',\n",
+       "  'Doublura: 100% polyester recycle']]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matches_check_ro[0][1].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GB: Shell fabric1:100% polyester'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matches_ro_list = matches_check_ro[0][1].tolist()\n",
+    "matches_ro_list[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lining: 100% polyester recycled']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#matches_ro = [matches_check_ro[0] for line_tag in matches_check_ro[0][1] if line_tag in ['recycled', 'organic']]\n",
+    "#matches_ro\n",
+    "#for line_tag in matches_check_ro[0][1].tolist():\n",
+    "#    if ('recycled' or 'organic') in line_tag:\n",
+    "#        print(line_tag)\n",
+    "\n",
+    "#matches_check_ro[0][1].isin(['recycled', 'organic'])\n",
+    "\n",
+    "matching = [s for s in matches_ro_list[0] if 'recycled' in s]\n",
+    "print(matching)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recycled:['Lining: 100% polyester recycled']\n",
+      "organic:[]\n",
+      "recycled+key:0    polyester\n",
+      "Name: 0, dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[                                                   0  \\\n",
+       " 0  chemically recycled 0    polyester\\nName: 0, d...   \n",
+       " \n",
+       "                                  1  \n",
+       " 0  Lining: 100% polyester recycled  ]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if matches found for ['nylon', 'polyester', 'linen', 'hemp', 'cotton', 'wool'], check if fibre as such or recycled/organic:\n",
+    "if matches_check_ro:\n",
+    "    matches_ro = matches_check_ro\n",
+    "    for i in range(len(matches_check_ro)):        \n",
+    "        matches_ro_list[i] = matches_check_ro[i][1].tolist()\n",
+    "        for line_tag in matches_ro_list[i]:\n",
+    "            recycled = [s for s in line_tag if 'recycled' in s]\n",
+    "            organic = [s for s in line_tag if 'organic' in s]\n",
+    "            print(f\"recycled:{recycled}\")\n",
+    "            print(f\"organic:{organic}\")\n",
+    "        if recycled:\n",
+    "            print(f\"recycled+key:{matches_check_ro[i][0]}\")\n",
+    "            matches_ro[i][0] = f\"chemically recycled {matches_check_ro[i][0]}\"\n",
+    "            matches_ro[i][1] = recycled\n",
+    "        elif organic:\n",
+    "            print(f\"organic+key:{matches_check_ro[i][0]}\")\n",
+    "            matches_ro[i][0] = f\"organic {matches_check_ro[i][0]}\"\n",
+    "            matches_ro[i][1] = organic\n",
+    "            \n",
+    "matches_ro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches_ro_df = pd.DataFrame(matches_ro)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0    chemically recycled 0    polyester\\nName:...</td>\n",
+       "      <td>0    chemically recycled 0    polyester\\nName:...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   0  \\\n",
+       "0  0    chemically recycled 0    polyester\\nName:...   \n",
+       "\n",
+       "                                                   1  \n",
+       "0  0    chemically recycled 0    polyester\\nName:...  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matches_ro_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0    chemically recycled 0    polyester\\nName:...\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matches_ro_df[0]"
    ]
   },
   {
